# innofilecheck

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
src/: CMakeLists.txt  codesigncheck.cpp  codesigncheck.h  innofilecheck.rc.in  main.cpp  utils.cpp  utils.h  versioninfo.cpp  versioninfo.h
